fix-bg-visible

--- a/src/css/support.css
+++ b/src/css/support.css
@@ -96,11 +96,11 @@ input:user-invalid {
 }
 
 .support-bg {
-  width: 644px;
+  width: 100%;
   height: 428px;
   border: 1px solid rgba(3, 10, 6, 0.15);
   border-radius: 61px;
-  background-image: url(./img/support/support-mob-img-min.webp);
+  background-image: url('../img/support/support-mob-img-min.webp');
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -108,7 +108,7 @@ input:user-invalid {
 
 @media screen and (min-resolution: 2x) {
   .support-bg {
-    background-image: url('./img/support/support-mob-img@2x-min.webp');
+    background-image: url('../img/support/support-mob-img@2x-min.webp');
   }
 }
 
@@ -131,14 +131,13 @@ input:user-invalid {
   }
   .support-bg {
     border-radius: 40px;
-
     width: 704px;
-    background-image: url('./img/support/support-tab-img-min.webp');
+    background-image: url('../img/support/support-tab-img-min.webp');
   }
 
   @media screen and (min-width: 768px) and (min-resolution: 2x) {
     .support-bg {
-      background-image: url('./img/support/support-tab-img@2x-min.webp');
+      background-image: url('../img/support/support-tab-img@2x-min.webp');
     }
   }
 }
@@ -163,12 +162,12 @@ input:user-invalid {
     max-width: 644px;
     height: 767px;
 
-    background-image: url('./img/support/support-desktop-img-min.webp');
+    background-image: url('../img/support/support-desktop-img-min.webp');
   }
 
   @media screen and (min-width: 1440px) and (min-resolution: 2x) {
     .support-bg {
-      background-image: url('./img/support/support-desktop-img@2x-min.webp');
+      background-image: url('../img/support/support-desktop-img@2x-min.webp');
     }
   }
 }
